--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ varying vec2 vDistortedTextureCoord;
                   target="_blank"
                   data-cursor="pointer2"
                 >
-                  <img src="imgs/accelrate.jpg" alt="" />
+                  <img src="imgs/accelrate.jpg" alt="accelrate" />
                   <p class="project-link">Accelerate 🔗</p></a
                 >
                 <p class="project-task">- Landing Page</p>
@@ -284,7 +284,7 @@ varying vec2 vDistortedTextureCoord;
                   target="_blank"
                   data-cursor="pointer2"
                 >
-                  <img src="imgs/thelazyceo.jpg" alt="" />
+                  <img src="imgs/thelazyceo.jpg" alt="thelazyceo" />
                   <p class="project-link">The Lazy CEO 🔗</p></a
                 >
                 <p class="project-task">- LEARNING MANAGEMENT SYSTEM</p>
@@ -298,7 +298,7 @@ varying vec2 vDistortedTextureCoord;
                   target="_blank"
                   data-cursor="pointer2"
                 >
-                  <img src="imgs/Jap-Division-Motorsports.jpg" alt="" />
+                  <img src="imgs/Jap-Division-Motorsports.jpg" alt="Jap Division MotorSports" />
                   <p class="project-link">Jap Division MotorSports 🔗</p></a
                 >
                 <p class="project-task">- Landing Page</p>
@@ -312,7 +312,7 @@ varying vec2 vDistortedTextureCoord;
                   target="_blank"
                   data-cursor="pointer2"
                 >
-                  <img src="imgs/hec.com.au.jpg" alt="" />
+                  <img src="imgs/hec.com.au.jpg" alt="Robert Herjavec" />
                   <p class="project-link">Robert Herjavec 🔗</p></a
                 >
                 <p class="project-task">- portfolio website</p>
@@ -326,7 +326,7 @@ varying vec2 vDistortedTextureCoord;
                   target="_blank"
                   data-cursor="pointer2"
                 >
-                  <img src="imgs/editoz-club.jpg" alt="" />
+                  <img src="imgs/editoz-club.jpg" alt="Editoz Club" />
                   <p class="project-link">Editoz Club 🔗</p></a
                 >
                 <p class="project-task">- Landing Page</p>
@@ -340,7 +340,7 @@ varying vec2 vDistortedTextureCoord;
                   target="_blank"
                   data-cursor="pointer2"
                 >
-                  <img src="imgs/cocomon.jpg" alt="" />
+                  <img src="imgs/cocomon.jpg" alt="Cocomon" />
                   <p class="project-link">Cocomon Single Product Page 🔗</p></a
                 >
                 <p class="project-task">
@@ -443,7 +443,7 @@ varying vec2 vDistortedTextureCoord;
                 href="https://www.tiktok.com/@rusiru__j"
                 target="_blank"
                 data-cursor="pointer2"
-                ><i> <img class="tiktok-icon" src="dr/img/tik-tok.png" /></i
+                ><i> <img class="tiktok-icon" src="dr/img/tik-tok.png" alt="tiktok"/></i
               ></a>
               <a
                 href="https://www.youtube.com/@rusirujay"
@@ -469,24 +469,24 @@ varying vec2 vDistortedTextureCoord;
             </div>
             <h2 class="forever-dev"># Let’s connect! You can reach out to me on the platforms above Or just drop me an email at <a href="mailto:dasithrusiru1@gmail.com" data-cursor="pointer2">dasithrusiru1@gmail.com</a></h1>
             <!-- <div class="gif-section">
-              <img src="gif/ai-bot.gif" alt="" />
+              <img src="gif/ai-bot.gif" alt="ai bot" />
 
-              <img src="gif/web-webdevelopper.gif" alt="" /><img
+              <img src="gif/web-webdevelopper.gif" alt="developer" /><img
                 src="gif/kushchenko-dev.gif"
                 alt=""
-              /><img src="gif/developer-client.gif" alt="" /><img
+              /><img src="gif/developer-client.gif" alt="client" /><img
                 src="gif/meditation-work.gif"
                 alt=""
-              /><img src="gif/css-html.gif" alt="" /><img
+              /><img src="gif/css-html.gif" alt="css" /><img
                 src="gif/cats.gif"
                 alt=""
               />
 
-              <img src="gif/soulja-boy-pepe.gif" alt="" /><img
+              <img src="gif/soulja-boy-pepe.gif" alt="work computer" /><img
                 src="gif/work-computer.gif"
                 alt=""
               /><img src="gif/core-keeper-core.gif" alt="" />
-              <img src="gif/wanna-code-code.gif" alt="" />
+              <img src="gif/wanna-code-code.gif" alt="code" />
             </div> -->
           </div>
         </div>
