--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ varying vec2 vDistortedTextureCoord;
               <div class="timeline-block timeline-block-right">
                 <div class="marker"></div>
                 <div class="timeline-content">
-                  <a href="https://www.hsbc.com/" target="_blank">
+                  <a href="https://editozclub.com/" target="_blank">
                     <h3 data-cursor="pointer2">Web Developer</h3>
                     <span>Editoz Club 2024/09 - present</span>
                     <p>
@@ -550,5 +550,6 @@ varying vec2 vDistortedTextureCoord;
   <!-- <script src="https://www.curtainsjs.com/build/curtains.min.js" type="text/javascript"></script>
 <script src="/scirpt/f-script.js"></script> -->
 </html>
+
 
 
